<resources>
    <string name="app_name">EcyclePAB</string>
    <string name="logo_description">Logo</string>
    <string name="ecycle">Ecycle</string>
    <string name="welcometo">Welcome to</string>
    <string name="login">Login</string>
    <string name="signup">Sign up</string>
    <string name="continuewithacc">Continue With Accounts</string>
    <string name="fb">FACEBOOK</string>
    <string name="google">GOOGLE</string>
    <string name="back_button">Back</string>
    <string name="full_name_icon">Full Name Icon</string>
    <string name="email_icon">Email Icon</string>
    <string name="password_icon">Password Icon</string>
    <string name="show_password_icon">Show Password Icon</string>
    <string name="enteryouremail">Enter Your Email</string>
    <string name="creatacc">Create your\nAccount</string>
    <string name="fullname">Full Name</string>
    <string name="pass">Password</string>
    <string name="register">Register</string>
    <string name="doyou">Already Have An Account? Sign In</string>
    <string name="forgetpass">Forget Password ?</string>
    <string name="loginacc">Login Your Account</string>
    <string name="createnew">Create New Account? Sign up</string>
    <string name="category_icon">Category Icon</string>
    <string name="product_image">Product Image</string>
    <string name="hello">Hello,</string>
    <string name="user_name">Sakti Gyatt</string>
    <string name="cart_icon">Cart Icon</string>
    <string name="ico_keranjang">Keranjang</string>
    <string name="search_icon">Search Icon</string>
    <string name="upload_now">Upload now</string>
    <string name="share_icon">Share</string>
    <string name="arrow_icon">Arrow Icon</string>
    <string name="voice_icon">Voice Icon</string>
    <string name="keyboard_image">Keyboard Image</string>
    <string name="categories">Categories</string>
    <string name="featured_product">Featured Product</string>
    <string name="laptop_collection">Laptop Collection</string>
    <string name="jualbarang">Jual Barangmu</string>
    <string name="search">Search</string>
    <string name="under_20_jt">Under 20jt</string>
    <string name="see_all">See All</string>
    <string name="keyboard_title">Keyboard</string>
    <string name="harga">$8</string>
    <string name="reviews">⭐ 4.6 | 86 Reviews</string>
    <string name="diskusi">Diskusi</string>
    <string name="produk_serupa">Produk Serupa</string>
    <string name="buy_now">Buy Now</string>
    <string name="keranjang"> + Keranjang</string>
    <string name="image_slider">imageslider</string>
    <string name="product_price">Rp %s</string>
    <string name="product_rating">⭐: %s</string>
    <string name="rp_1_500_000">Rp 1.500.000</string>
    <string name="product_name">Product Name</string>
    <string name="product_image_description">Image of the product</string>
    <string name="seller_image">seller image\n</string>
    <string name="detail_product">Detail Product</string>
    <string name="diskusi_produk">Diskusi Produk</string>
    <string name="description_product">Description Product</string>
    <string name="rachel">Rachel</string>
    <string name="location">Tangerang Selatan</string>
    <string name="isi_des">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="image_description">image_deskripsi</string>
    <string name="label">Label</string>
    <string name="value">: Value</string>
    <string name="profile_image">diskusiprofil\n</string>
    <string name="tulis_diskusi">Tulis diskusi disini</string>
    <string name="send_button">Send Button</string>
    <string name="beli">Beli</string>
    <string name="pilih_semua">Pilih Semua</string>
    <string name="decrease_quantity">Decrease Quantity</string>
    <string name="increase_quantity">Increase Quantity</string>


</resources>